# rust-match-domain

./: Cargo.toml  README.md
src/: lib.rs
