[package]
name = "match-domain"
version = "0.1.0"
authors = ["Jun Kurihara"]
homepage = "https://github.com/junkurihara/rust-match-domain"
repository = "https://github.com/junkurihara/rust-match-domain"
license = "MIT"
readme = "./README.md"
edition = "2021"
categories = ["network-programming"]
keywords = ["dns", "domain", "blocklist", "allowlist"]

[dependencies]
# tracing
tracing = { version = "0.1.40" }

# error handling
thiserror = { version = "2.0.3" }

# double-array trie
cedarwood = { version = "0.4.6" }

# regex
regex = { version = "1.11.1" }

[profile.release]
codegen-units = 1
incremental = false
lto = "fat"
opt-level = 3
panic = "abort"
strip = true
